# life-sim

./: .gitignore  Cargo.toml  README.md  default.toml
data/scenarios/: buffet.json  wave.json
scripts/: plot.py
src/: body.rs  decision.rs  dot.rs  entities.rs  entity.rs  entity_config.rs  grid_config.rs  input_neuron.rs  kill_zone.rs  life_sim.rs  main.rs  network.rs  neural_network_config.rs  output_neuron.rs  render_config.rs  rendering.rs  selection.rs  settings.rs  simulation_config.rs  vector_2d.rs
src/genome/: gene.rs  mod.rs  mutation.rs
src/neural_network/: brain.rs  connection.rs  hidden_neuron.rs  input_neuron.rs  input_neuron_kind.rs  mod.rs  neuron_kind.rs  output_neuron.rs  output_neuron_kind.rs
src/scenario/: food.rs  kill_zone.rs  mod.rs  radiation_zone.rs  scenario.rs  scenario_config.rs
src/services/: dot.rs  mod.rs  scenarios.rs
src/util/: dot.rs
