[package]
name = "life-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cellular_automata = { git = "https://github.com/ntwiles/cellular-automata.git" }
config = "0.13.4"
colorgrad = "0.6.2"
dot-writer = "0.1.3"
pixels = "0.13.0"
rand = "0.8.4"
serde = { version = "1.0.8", features = ["derive"] }
strum = "0.23"
strum_macros = "0.23"
