[package]
name = "life-sim"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cellular_automata = { git = "https://github.com/ntwiles/cellular-automata.git" }
config = "0.13"
colorgrad = "0.6"
dot-writer = "0.1"
pixels = "0.13"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.23"
strum_macros = "0.23"
noise = "0.8"
